<resources>
    <string name="app_name">Compendio</string>
    <string name="pick_image_intent_text">Elegir imagen</string>
    <string name="demo_min_label">min</string>
    <string name="demo_max_label">max</string>
    <string name="perm_camera">Se necesitan permisos para almacenamiento</string>



    <string name="login">Sing In</string>
    <string name="login_user">  User (email or phone number )</string>
    <string name="login_password">  Password</string>
    <string name="forgot_password"> Forgot your password? </string>


    <string name="not_user">User not found</string>
    <string name="invalid_password">Incorrect Password</string>
    <string name="no_connect">Unable to connect to server</string>
    <string name="password_long">Password is too long</string>



    <string name="chapter_complete">Has concluido el capítulo</string>
    <string name="chapter_course">Has concluido el curso</string>
    <string name="chapter_review">Has concluido el repaso</string>
    <string name="good">¡Bien Hecho!</string>
    <string name="good_great">¡Felicitaciones!</string>
    <string name="acepted">Aceptar</string>
    <string name="next_chapter">Siguiente Capítulo</string>
    <string name="review_commend">Mejora tu ranking y fortalece tu aprendizaje hasta el próximo repaso</string>
    <string name="course_complete">Finalizar curso</string>
    <string name="review_complete">Finalizar repaso</string>
    <string name="review">Repaso</string>
</resources>
