<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/ly_review_complete"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cream"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/good"
                    android:textColor="@color/black"
                    android:textSize="25dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/chapter_review"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/escudo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:id="@+id/title_course_review"
                        android:text="Titulo del repaso"
                        android:visibility="gone"
                        android:textColor="@color/black"
                        android:textSize="23dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/review_commend"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/tv_review_next"
                        fontPath="fonts/Roboto-Bold.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:text="17/17/2015"
                        android:textColor="@color/black"
                        android:textSize="25dp" />


                    <Button

                        android:id="@+id/button_review_complete"
                        android:layout_width="250dp"
                        android:layout_height="40dp"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="center"
                        android:layout_margin="25dp"
                        android:background="@drawable/button_square_border"
                        android:text="@string/acepted" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</LinearLayout>